# ai_data_analysis_agent

./: .gitignore  README.md  agent_config.json  pyproject.toml
ai_data_analysis_agent/: __init__.py  analysis.py  main.py
sample_data/: sales.csv
tests/: test_analysis.py
