[project]
name = "ai-data-analysis-agent"
version = "0.1.0"
description = "An AI-powered analytical agent capable of processing structured data, performing statistical analysis, and generating reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "agno>=1.0.0",
  "matplotlib>=3.9.0",
  "numpy>=2.0.0",
  "openai>=1.0.0",
  "pandas>=2.2.0",
  "tabulate>=0.9.0",
]

[project.scripts]
ai-data-analysis-agent = "ai_data_analysis_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_data_analysis_agent"]
